product-serivce : we already set up sentinel redis

--- a/common-cache/src/main/resources/application.yaml
+++ b/common-cache/src/main/resources/application.yaml
@@ -1,9 +1,18 @@
 spring:
   application:
     name: common-cache
+  data:
+    redis:
+      sentinel:
+        master: mymaster
+        nodes:
+          - redis-sentinel-1:26379
+          - redis-sentinel-2:26379
+          - redis-sentinel-3:26379
+      timeout: 2s
+      lettuce:
+        shutdown-timeout: 200ms
 
 cache:
   redis:
-    host: localhost
-    port: 6379
     defaultTtl: 15m
