--- a/product-service/src/main/resources/application.yaml
+++ b/product-service/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ spring:
   application:
     name: product-service
   datasource:
-    url: jdbc:mysql://condescending_shockley:3306/product_service
+    url: jdbc:mysql://mysql:3306/product_service
     username: admin
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -31,7 +31,17 @@ spring:
       auto-commit: true
       validation-timeout: 5000
       connection-test-query: SELECT 1  # Ensures connectivity health check
-
+  data:
+    redis:
+      sentinel:
+        master: mymaster
+        nodes:
+          - redis-sentinel-1:26379
+          - redis-sentinel-2:26379
+          - redis-sentinel-3:26379
+      timeout: 2s
+      lettuce:
+        shutdown-timeout: 200ms
   jpa:
 #    show-sql: true
     properties:
@@ -45,7 +55,5 @@ spring:
 #    org.hibernate.SQL: debug
 cache:
   redis:
-    host: localhost
-    port: 6379
     defaultTtl: 15m
     enabled: true
